# imxrt-debug-tools

./: Cargo.toml  README.md
.github/workflows/: ci.yml
ccm-obs/: Cargo.toml
ccm-obs/src/: lib.rs
tools/: Cargo.toml
