# SPDX-License-Identifier: MPL-2.0
# SPDX-FileCopyrightText: Copyright 2024 Ian McIntyre

[package]
name = "tools"
version = "0.1.0"
license.workspace = true
repository.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
ccm-obs = { workspace = true }

clap = { workspace = true, features = ["derive"] }
probe-rs = { workspace = true }
